# simpletracer

./: CMakeLists.txt
include/: annotated.tracer.h  ezOptionParser.h
libtracer/: CMakeLists.txt
libtracer/annotated.tracer/: annotated.tracer.cpp
libtracer/annotated.tracer/tainted.index/: CMakeLists.txt  TrackingExecutor.cpp
libtracer/annotated.tracer/z3.executor/: CMakeLists.txt  Z3SymbolicExecutor.cpp
offline.sanitizers/: CMakeLists.txt
offline.sanitizers/address.sanitizer/: CMakeLists.txt
river.tracer/: CMakeLists.txt
